syntax = "proto3";

package domain.v1;
option go_package = "internal/domain/pb";

import "google/protobuf/timestamp.proto";

enum SourceType {
  TYPE_UNDEFINED = 0;
  TYPE_WEB = 1;
  TYPE_SINGLE_FILE = 2;
  TYPE_ARCHIVED_FILES = 3;
  TYPE_WITH_CREDENTIALS = 4;
};

enum SourceStatus {
  STATUS_UNDEFINED = 0;
  STATUS_READY = 1;
  STATUS_PARSING = 2;
  STATUS_FAILED = 3;
}

message CronFormat {
  int32 minute = 1;
  int32 hour = 2;
  int32 dayOfMonth = 3;
  int32 month = 4;
  int32 dayOfWeek = 5;
}

message UpdateParams {
  optional int64 everyPeriod = 1;
  optional CronFormat cron = 2;
};

message Source {
  int64 id = 1;
  int64 userId = 2;
  string title = 3;
  bytes content = 4;
  SourceType typ = 5;
  optional UpdateParams updateParams = 6;
  optional bytes credentials = 7;
  SourceStatus status = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
};

message CreateSourceRequest {
  string title = 1;
  bytes content = 2;
  SourceType typ = 3;
  optional UpdateParams updateParams = 4;
  optional bytes credentials = 5;
};

message GetSourceRequest {
  int64 sourceId = 1;
};

message GetSourceIDsRequest {
  repeated int64 sourceIds = 1;
};

message GetSourceIDsResponse {
  repeated string sourceIds = 2;
};

message UpdateSourceRequest {
  int64 sourceId = 1;
  optional string title = 2;
  optional bytes content = 3;
  optional UpdateParams updateParams = 4;
  optional bytes credentials = 5;
};

message DeleteSourceRequest {
  int64 sourceId = 1;
};

message ListSourcesRequest {
  uint64 offset = 1;
  uint64 limit = 2;
};

message ListSourcesByDomainRequest {
  int64 domainId = 1;
  uint64 offset = 2;
  uint64 limit = 3;
};

message ListSourcesResponse {
  repeated Source sources = 1;
};
